--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -68,7 +68,7 @@
 </div>
 
 <div class="row text-white pl-5 mt-5 mb-2">
-    <h2>Blog</h2>
+    <h2 translate>publi.blog-subtitle</h2>
 </div>
 <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
     <ng-container *ngIf="loading; else skeletonTemplate">
@@ -160,7 +160,7 @@
 </div>
 
 <div class="row text-white pl-5 mb-2">
-    <h2>Artigos Ciêntificos</h2>
+    <h2 translate>publi.sci-subtitle</h2>
 </div>
 <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
     <ng-container *ngIf="loading; else skeletonTemplate">
