--- a/src/app/secondary-components/not-found/not-found.component.html
+++ b/src/app/secondary-components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="container-xxl">
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
     <app-navbar></app-navbar>
     <div class="row justify-content-center mt-5">
         <p class="glitch-text">
