--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -1,38 +1,39 @@
-<app-navbar></app-navbar>
-<div *ngIf="loading">
-    <div class="row pl-5 pt-5 mt-5">
-        <h1 translate>publi.title</h1>
-    </div>
-    <div class="row">
-        <div translate class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 pl-5 px-sm-5 px-md-5 about-text">
-            publi.description
-            <div class="row" style="font-size: 2rem;">
-                <a href="https://lucasbsilva29.medium.com/" class="text-white ml-3 mt-2 icon">
-                    <fa-icon [icon]="['fab', 'medium']"></fa-icon>
-                </a>
-                <a href="https://dev.to/lucs1590" class="text-white ml-2 mt-2 icon">
-                    <fa-icon [icon]="['fab', 'dev']"></fa-icon>
-                </a>
-                <a href="https://scholar.google.com.br/citations?user=lwCbcswAAAAJ&hl"
-                    class="text-white ml-2 mt-2 icon">
-                    <img [src]="scholarImage" class="img-icon" (mouseover)="defineIconImage($event)"
-                        (mouseout)="defineIconImage($event)" height="28rem">
-                </a>
-                <a href="https://www.researchgate.net/profile/Lucas-Brito-Silva" class="text-white ml-2 mt-2 icon">
-                    <fa-icon [icon]="['fab', 'researchgate']"></fa-icon>
-                </a>
-            </div>
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
+    <app-navbar></app-navbar>
+    <div *ngIf="loading">
+        <div class="row pl-5 pt-5 mt-5">
+            <h1 translate>publi.title</h1>
         </div>
-        <!-- <div>
+        <div class="row">
+            <div translate class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 pl-5 px-sm-5 px-md-5 about-text">
+                publi.description
+                <div class="row" style="font-size: 2rem;">
+                    <a href="https://lucasbsilva29.medium.com/" class="text-white ml-3 mt-2 icon">
+                        <fa-icon [icon]="['fab', 'medium']"></fa-icon>
+                    </a>
+                    <a href="https://dev.to/lucs1590" class="text-white ml-2 mt-2 icon">
+                        <fa-icon [icon]="['fab', 'dev']"></fa-icon>
+                    </a>
+                    <a href="https://scholar.google.com.br/citations?user=lwCbcswAAAAJ&hl"
+                        class="text-white ml-2 mt-2 icon">
+                        <img [src]="scholarImage" class="img-icon" (mouseover)="defineIconImage($event)"
+                            (mouseout)="defineIconImage($event)" height="28rem">
+                    </a>
+                    <a href="https://www.researchgate.net/profile/Lucas-Brito-Silva" class="text-white ml-2 mt-2 icon">
+                        <fa-icon [icon]="['fab', 'researchgate']"></fa-icon>
+                    </a>
+                </div>
+            </div>
+            <!-- <div>
         <img src="../../../assets/img/writer.jpeg" class="img-fluid" alt="Writer Image"
             style="height: 15rem;width: 60rem;object-fit: cover;">
     </div> -->
+        </div>
     </div>
-</div>
 
-<div *ngIf="!loading">
-    <div class="row pl-5 pt-5 mt-5">
-        <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
+    <div *ngIf="!loading">
+        <div class="row pl-5 pt-5 mt-5">
+            <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
             'border-radius': '5px',
             'height': '3rem',
             'width': '10rem',
@@ -40,19 +41,19 @@
             'border': '1px solid #323232',
             'animation-duration': '1.2s'
           }">
-        </ngx-skeleton-loader>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 pl-5 px-sm-5 px-md-5 about-text">
-            <ngx-skeleton-loader count="3" [theme]="{
+            </ngx-skeleton-loader>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 pl-5 px-sm-5 px-md-5 about-text">
+                <ngx-skeleton-loader count="3" [theme]="{
                 'border-radius': '5px',
                 'width': '30rem',
                 'background-color': '#323232',
                 'border': '1px solid #323232',
                 'animation-duration': '1.2s'
               }"></ngx-skeleton-loader>
-            <div class="row" style="font-size: 2rem;">
-                <ngx-skeleton-loader count="4" [theme]="{
+                <div class="row" style="font-size: 2rem;">
+                    <ngx-skeleton-loader count="4" [theme]="{
                     'border-radius': '5px',
                     'width': '2rem',
                     'height': '2rem',
@@ -61,47 +62,47 @@
                     'margin-left': '0.5rem',
                     'animation-duration': '1.2s'
                   }"></ngx-skeleton-loader>
+                </div>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
 
-<div class="row text-white pl-5 mt-5 mb-2">
-    <h2 translate>publi.blog-subtitle</h2>
-</div>
-<div class="d-flex flex-wrap text-dark justify-content-around pb-4">
-    <ng-container *ngIf="loading; else skeletonTemplate">
-        <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
-            *ngFor="let pub of blogPublications">
-            <div class="card-body">
-                <img [src]="pub.image" class="thumb mr-2 mb-1" alt="Thumbnail" height="2rem">
-                <h4 class="card-title">{{ pub.title }}</h4>
-                <div class="card-text about-text" [innerHTML]=pub.description></div>
-                <div class="row w-100 foot-card">
-                    <div class="col">
-                        <a translate [href]=pub.url class="read-more">
-                            <fa-icon icon="link"></fa-icon> publi.read-more
-                        </a>
-                    </div>
-                    <div class="col">
-                        <p class="card-text text-right">
-                            <small class="text-muted">
-                                {{ pub.publicationDate | date:'mediumDate'}}
-                            </small>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </ng-container>
-
-    <ng-template #skeletonTemplate>
-        <div>
-            <div class="card mt-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0">
+    <div class="row text-white pl-5 mt-5 mb-2">
+        <h2 translate>publi.blog-subtitle</h2>
+    </div>
+    <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
+        <ng-container *ngIf="loading; else skeletonTemplate">
+            <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
+                *ngFor="let pub of blogPublications">
                 <div class="card-body">
-                    <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
+                    <img [src]="pub.image" class="thumb mr-2 mb-1" alt="Thumbnail" height="2rem">
+                    <h4 class="card-title">{{ pub.title }}</h4>
+                    <div class="card-text about-text" [innerHTML]=pub.description></div>
+                    <div class="row w-100 foot-card">
+                        <div class="col">
+                            <a translate [href]=pub.url class="read-more">
+                                <fa-icon icon="link"></fa-icon> publi.read-more
+                            </a>
+                        </div>
+                        <div class="col">
+                            <p class="card-text text-right">
+                                <small class="text-muted">
+                                    {{ pub.publicationDate | date:'mediumDate'}}
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </ng-container>
+
+        <ng-template #skeletonTemplate>
+            <div>
+                <div class="card mt-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0">
+                    <div class="card-body">
+                        <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
                         'border-radius': '5px',
                         'height': '4rem',
                         'width': '4rem',
@@ -109,18 +110,18 @@
                         'border': '1px solid #323232',
                         'animation-duration': '1.2s'
                       }">
-                    </ngx-skeleton-loader>
-                    <div class="card-title">
-                        <ngx-skeleton-loader count="2" [theme]="{
+                        </ngx-skeleton-loader>
+                        <div class="card-title">
+                            <ngx-skeleton-loader count="2" [theme]="{
                         'border-radius': '5px',
                         'width': '18rem',
                         'background-color': '#323232',
                         'border': '1px solid #323232',
                         'animation-duration': '1.2s'
                       }"></ngx-skeleton-loader>
-                    </div>
-                    <div class="card-text">
-                        <ngx-skeleton-loader count="3" [theme]="{
+                        </div>
+                        <div class="card-text">
+                            <ngx-skeleton-loader count="3" [theme]="{
                             'margin-left': '1rem',
                             'border-radius': '5px',
                             'width': '21.5rem',
@@ -128,10 +129,10 @@
                             'border': '1px solid #323232',
                             'animation-duration': '1.2s'
                           }"></ngx-skeleton-loader>
-                    </div>
-                    <div class="row w-100 foot-card">
-                        <div class="col">
-                            <ngx-skeleton-loader count="1" [theme]="{
+                        </div>
+                        <div class="row w-100 foot-card">
+                            <div class="col">
+                                <ngx-skeleton-loader count="1" [theme]="{
                                 'margin-left': '1rem',
                                 'border-radius': '5px',
                                 'width': '5rem',
@@ -139,10 +140,10 @@
                                 'border': '1px solid #323232',
                                 'animation-duration': '1.2s'
                               }"></ngx-skeleton-loader>
-                        </div>
-                        <div class="col">
-                            <p class="card-text text-right">
-                                <ngx-skeleton-loader count="1" [theme]="{
+                            </div>
+                            <div class="col">
+                                <p class="card-text text-right">
+                                    <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
                                     'width': '3rem',
@@ -150,50 +151,50 @@
                                     'border': '1px solid #323232',
                                     'animation-duration': '1.2s'
                                   }"></ngx-skeleton-loader>
-                            </p>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </ng-template>
-</div>
+        </ng-template>
+    </div>
 
-<div class="row text-white pl-5 mb-2">
-    <h2 translate>publi.sci-subtitle</h2>
-</div>
-<div class="d-flex flex-wrap text-dark justify-content-around pb-4">
-    <ng-container *ngIf="loading; else skeletonTemplate">
-        <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
-            *ngFor="let pub of sciPublications">
-            <div class="card-body">
-                <img [src]="pub.image" class="thumb mr-2 mb-1" alt="Thumbnail" height="2rem">
-                <h4 class="card-title">{{ pub.title }}</h4>
-                <div class="card-text about-text" [innerHTML]=pub.description></div>
-                <div class="row w-100 foot-card">
-                    <div class="col">
-                        <a translate [href]=pub.url class="read-more">
-                            <fa-icon icon="link"></fa-icon> publi.read-more
-                        </a>
-                    </div>
-                    <div class="col">
-                        <p class="card-text text-right">
-                            <small class="text-muted">
-                                {{ pub.publicationDate | date:'mediumDate'}}
-                            </small>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </ng-container>
-
-    <ng-template #skeletonTemplate>
-        <div>
-            <div class="card mt-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0">
+    <div class="row text-white pl-5 mb-2">
+        <h2 translate>publi.sci-subtitle</h2>
+    </div>
+    <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
+        <ng-container *ngIf="loading; else skeletonTemplate">
+            <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
+                *ngFor="let pub of sciPublications">
                 <div class="card-body">
-                    <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
+                    <img [src]="pub.image" class="thumb mr-2 mb-1" alt="Thumbnail" height="2rem">
+                    <h4 class="card-title">{{ pub.title }}</h4>
+                    <div class="card-text about-text" [innerHTML]=pub.description></div>
+                    <div class="row w-100 foot-card">
+                        <div class="col">
+                            <a translate [href]=pub.url class="read-more">
+                                <fa-icon icon="link"></fa-icon> publi.read-more
+                            </a>
+                        </div>
+                        <div class="col">
+                            <p class="card-text text-right">
+                                <small class="text-muted">
+                                    {{ pub.publicationDate | date:'mediumDate'}}
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </ng-container>
+
+        <ng-template #skeletonTemplate>
+            <div>
+                <div class="card mt-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0">
+                    <div class="card-body">
+                        <ngx-skeleton-loader count="1" class="thumb mr-2 mb-1" [theme]="{
                         'border-radius': '5px',
                         'height': '4rem',
                         'width': '4rem',
@@ -201,18 +202,18 @@
                         'border': '1px solid #323232',
                         'animation-duration': '1.2s'
                       }">
-                    </ngx-skeleton-loader>
-                    <div class="card-title">
-                        <ngx-skeleton-loader count="2" [theme]="{
+                        </ngx-skeleton-loader>
+                        <div class="card-title">
+                            <ngx-skeleton-loader count="2" [theme]="{
                         'border-radius': '5px',
                         'width': '18rem',
                         'background-color': '#323232',
                         'border': '1px solid #323232',
                         'animation-duration': '1.2s'
                       }"></ngx-skeleton-loader>
-                    </div>
-                    <div class="card-text">
-                        <ngx-skeleton-loader count="3" [theme]="{
+                        </div>
+                        <div class="card-text">
+                            <ngx-skeleton-loader count="3" [theme]="{
                             'margin-left': '1rem',
                             'border-radius': '5px',
                             'width': '21.5rem',
@@ -220,10 +221,10 @@
                             'border': '1px solid #323232',
                             'animation-duration': '1.2s'
                           }"></ngx-skeleton-loader>
-                    </div>
-                    <div class="row w-100 foot-card">
-                        <div class="col">
-                            <ngx-skeleton-loader count="1" [theme]="{
+                        </div>
+                        <div class="row w-100 foot-card">
+                            <div class="col">
+                                <ngx-skeleton-loader count="1" [theme]="{
                                 'margin-left': '1rem',
                                 'border-radius': '5px',
                                 'width': '5rem',
@@ -231,10 +232,10 @@
                                 'border': '1px solid #323232',
                                 'animation-duration': '1.2s'
                               }"></ngx-skeleton-loader>
-                        </div>
-                        <div class="col">
-                            <p class="card-text text-right">
-                                <ngx-skeleton-loader count="1" [theme]="{
+                            </div>
+                            <div class="col">
+                                <p class="card-text text-right">
+                                    <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
                                     'width': '3rem',
@@ -242,11 +243,12 @@
                                     'border': '1px solid #323232',
                                     'animation-duration': '1.2s'
                                   }"></ngx-skeleton-loader>
-                            </p>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </ng-template>
+        </ng-template>
+    </div>
 </div>
