refactor: renaming technologies to hobbies

--- a/src/app/separador/separador.component.html
+++ b/src/app/separador/separador.component.html
@@ -4,5 +4,5 @@
 <ng-template #deskTemplate>
   <app-home></app-home>
   <!-- <app-recommendations></app-recommendations> -->
-  <!-- <app-technologies></app-technologies> -->
+  <!-- <app-hobbies></app-hobbies> -->
 </ng-template>
