--- a/src/app/secondary-components/technologies-list/technologies-list.component.html
+++ b/src/app/secondary-components/technologies-list/technologies-list.component.html
@@ -1,1 +1,10 @@
-<p>technologies-list works!</p>
+<div *ngFor="let tech of technologiesList">
+    <div class="card m-2 border-0 bg-dark text-center" (click)="openLink(tech.link)" style="cursor: pointer;">
+        <img class="card-img-top rounded-circle mx-auto" src="{{tech.image}}" alt="{{tech.name}}"
+            style="height: 10rem; width: 10rem;">
+        <div class="card-body">
+            <h5 class="card-title">{{tech.name}}</h5>
+            <p class="card-text">{{tech.description}}</p>
+        </div>
+    </div>
+</div>
