--- a/src/app/secondary-components/icones/icones.component.css
+++ b/src/app/secondary-components/icones/icones.component.css
@@ -1,10 +1,10 @@
-.icons_div{
+.icons-div {
     margin-top: 10rem;
     font-size: 2rem;
 }
 
-.icon:hover{
+.icon:hover {
     transform: scale(1.25);
     transition-duration: 0.5s;
-    color:#E69C24 !important;
+    color: #E69C24 !important;
 }
