style: changing class name

--- a/src/app/secondary-components/icones/icones.component.html
+++ b/src/app/secondary-components/icones/icones.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center icons_div">
+<div class="d-flex justify-content-center icons-div">
 
     <ng-container *ngFor="let icon of iconList">
         <a [href]=icon.link class="text-white ml-3 icon" *ngIf="icon.active">
