refactor: changing left and right to start and end

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,10 @@
       <h3 translate id="sub_title">home.sub_title</h3>
     </div>
     <hr>
-    <div class="d-flex align-items-start ml-3 mr-3 mt-5">
+    <div class="d-flex align-items-start ms-3 me-3 mt-5">
       <h5 translate>home.about</h5>
     </div>
-    <div translate class="d-flex align-items-start ml-4 mr-4 sobre_text" [translateParams]="{idade: idade}">
+    <div translate class="d-flex align-items-start ms-4 me-4 sobre_text" [translateParams]="{idade: idade}">
       home.description</div>
 
     <app-icones></app-icones>
