--- a/src/app/secondary-components/recommendations/recommendations.component.html
+++ b/src/app/secondary-components/recommendations/recommendations.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="min-height:100%; overflow-y: auto;">
-	<div class="d-flex align-items-start ml-5 mr-3">
+	<div class="d-flex align-items-start ms-5 me-3">
 		<h5 translate>recommendations.title</h5>
 	</div>
 	<div id="carouselControls" class="carousel slide carousel-fade w-100" data-ride="carousel">
