--- a/src/app/m-home/m-home.component.css
+++ b/src/app/m-home/m-home.component.css
@@ -1,38 +1,27 @@
-#particles-js canvas{
+#particles-js canvas {
     position: absolute;
-    width: 100%;
-    height: 100%;
     z-index: -1;
 }
 
-#title_name{
+#title_name {
     font-family: 'Montserrat', 'Anton', 'Poppins', sans-serif;
     font-size: 4rem;
 }
 
-h3{
+h3 {
     font-family: 'Anton', 'Poppins', sans-serif;
 }
 
-h5{
+h5 {
     font-weight: bold
 }
 
-hr{
+hr {
     width: 5rem;
-    border-top: 0.25rem solid rgba(0,0,0,.1)
+    border-top: 0.25rem solid rgba(0, 0, 0, .1)
 }
 
-.sobre_text {
-    font-family: 'Open Sans', 'Roboto Condensed', 'Lato', sans-serif;
-    font-weight: 300;
-}
-
-.icons_div{
-    margin-top: 10rem;
-}
-
-#imgPerfil{
+#imgPerfil {
     border-radius: 50%;
     width: 7rem;
     height: 7rem;
