refactor: hr bar

--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
 
   <div class="col-12 text-light mh-100">
     <app-navbar></app-navbar>
