--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,7 +18,7 @@ h5 {
 
 hr {
     width: 25rem;
-    border-top: 0.25rem solid rgba(0, 0, 0, .1)
+    border-top: 0.35rem solid rgba(255, 255, 255, 0.3);
 }
 
 .sobre_text {
