refactor: text-right to text-end

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -86,7 +86,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <p class="card-text text-right">
+                            <p class="card-text text-end">
                                 <small class="text-muted">
                                     {{ pub.publicationDate | date:'mediumDate'}}
                                 </small>
@@ -142,7 +142,7 @@
                               }"></ngx-skeleton-loader>
                             </div>
                             <div class="col">
-                                <p class="card-text text-right">
+                                <p class="card-text text-end">
                                     <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
@@ -178,7 +178,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <p class="card-text text-right">
+                            <p class="card-text text-end">
                                 <small class="text-muted">
                                     {{ pub.publicationDate | date:'mediumDate'}}
                                 </small>
@@ -234,7 +234,7 @@
                               }"></ngx-skeleton-loader>
                             </div>
                             <div class="col">
-                                <p class="card-text text-right">
+                                <p class="card-text text-end">
                                     <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
