feat: updating images with NgOptimizedImage

--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -4,7 +4,7 @@
     <app-navbar></app-navbar>
 
     <div class="d-flex justify-content-center mt-5">
-      <img src="../../assets/img/principal-min-mob.png" alt="Perfil" id="imgPerfil" loading="lazy">
+      <img NgOptimizedImage src="../../assets/img/principal-min-mob.png" alt="Perfil" id="imgPerfil" loading="lazy">
     </div>
 
     <div class="d-flex justify-content-center mt-5">
