--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="card-deck">
         <div class="card" *ngFor="[].constructor(3)">
-            <img class="card-img-top" src="..." alt="Card image cap" loading="lazy">
+            <img NgOptimizedImage class="card-img-top" src="..." alt="Card image cap" loading="lazy">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
