--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,25 @@
 <div class="row" style="min-height:100%; overflow-y: auto;">
-  <div class="col-lg-7 text-light mh-100">
-    <app-navbar></app-navbar>
-    <div class="d-flex justify-content-center mt-5">
-      <h1 id="title_name">Lucas Brito</h1>
-    </div>
-    <div class="d-flex justify-content-center">
-      <h3 translate id="sub_title">home.sub_title</h3>
-    </div>
-    <hr>
-    <div class="d-flex align-items-start ms-3 me-3 mt-5">
-      <h5 translate>home.about</h5>
-    </div>
-    <div translate class="d-flex align-items-start ms-4 me-4 sobre_text" [translateParams]="{idade: idade}">
-      home.description</div>
+    <div class="col-lg-7 text-light mh-100">
+        <app-navbar></app-navbar>
+        <div class="d-flex justify-content-center mt-5">
+            <h1 id="title_name">Lucas Brito</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+            <h2 translate id="sub_title">home.sub_title</h2>
+        </div>
+        <hr>
+        <div class="d-flex align-items-start ms-3 me-3 mt-5">
+            <h5 translate>home.about</h5>
+        </div>
+        <div class="d-flex align-items-start ms-4 me-4 sobre_text">
+            <p class="text-justify" [innerHTML]="'home.description' | translate: { idade: idade }"></p>
+        </div>
 
-    <app-icones></app-icones>
+        <app-icones></app-icones>
 
-  </div>
-  <div class="col-lg-5 mh-100 imgPrincipal">
-  </div>
+    </div>
+    <div class="col-lg-5 mh-100 imgPrincipal">
+    </div>
 </div>
 
 <!-- <div class="row" style="min-height:100%; overflow-y: auto;">
