--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -8,18 +8,21 @@
             <div translate class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 ps-5 px-sm-5 px-md-5 about-text">
                 publi.description
                 <div class="row" style="font-size: 2rem;">
-                    <a href="https://lucasbsilva29.medium.com/" class="text-white ms-2 mt-2 icon">
+                    <a href="https://lucasbsilva29.medium.com/" class="text-white ms-2 mt-2 icon"
+                        aria-label="Check my Medium">
                         <fa-icon [icon]="['fab', 'medium']"></fa-icon>
                     </a>
-                    <a href="https://dev.to/lucs1590" class="text-white ms-2 mt-2 icon">
+                    <a href="https://dev.to/lucs1590" class="text-white ms-2 mt-2 icon" aria-label="Check my Dev.to">
                         <fa-icon [icon]="['fab', 'dev']"></fa-icon>
                     </a>
                     <a href="https://scholar.google.com.br/citations?user=lwCbcswAAAAJ&hl"
-                        class="text-white ms-2 mt-2 icon">
-                        <img NgOptimizedImage [src]="scholarImage" class="img-icon" (mouseover)="defineIconImage($event)"
-                            (mouseout)="defineIconImage($event)" height="28rem" loading="lazy">
+                        class="text-white ms-2 mt-2 icon" aria-label="Check my Google Scholar">
+                        <img NgOptimizedImage [src]="scholarImage" class="img-icon"
+                            (mouseover)="defineIconImage($event)" (mouseout)="defineIconImage($event)" height="28rem"
+                            loading="lazy" alt="Google Scholar">
                     </a>
-                    <a href="https://www.researchgate.net/profile/Lucas-Brito-Silva" class="text-white ms-2 mt-2 icon">
+                    <a href="https://www.researchgate.net/profile/Lucas-Brito-Silva" class="text-white ms-2 mt-2 icon"
+                        aria-label="Check my ResearchGate">
                         <fa-icon [icon]="['fab', 'researchgate']"></fa-icon>
                     </a>
                 </div>
@@ -76,7 +79,7 @@
             <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
                 *ngFor="let pub of blogPublications">
                 <div class="card-body">
-                    <h4 class="card-title mb-2">{{ pub.title }}</h4>
+                    <h3 class="card-title mb-2">{{ pub.title }}</h3>
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
@@ -159,8 +162,9 @@
             <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
                 *ngFor="let pub of sciPublications">
                 <div class="card-body">
-                    <img NgOptimizedImage [src]="pub.image" class="thumb me-2 mb-1" alt="Thumbnail" height="2rem" loading="lazy">
-                    <h4 class="card-title">{{ pub.title }}</h4>
+                    <img NgOptimizedImage [src]="pub.image" class="thumb me-2 mb-1" alt="Thumbnail" height="2rem"
+                        loading="lazy">
+                    <h3 class="card-title sci-title">{{ pub.title }}</h3>
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
