feat: add target blank to sci publications

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -168,7 +168,7 @@
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
-                            <a translate [href]=pub.url class="read-more">
+                            <a translate [href]=pub.url class="read-more" target="_blank">
                                 <fa-icon icon="link"></fa-icon> publi.read-more
                             </a>
                         </div>
