--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -83,7 +83,7 @@
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
-                            <a translate [href]=pub.url class="read-more" target="_blank" *ngIf="!isOffline$; else disabledLink">
+                            <a translate [href]=pub.url class="read-more" target="_blank" *ngIf="isOnline; else disabledLink">
                                 <fa-icon icon="link"></fa-icon> publi.read-more
                             </a>
                             <ng-template #disabledLink>
