feat: using directive instead of fixed code

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -83,14 +83,9 @@
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
-                            <a translate [href]=pub.url class="read-more" target="_blank" *ngIf="isOnline; else disabledLink">
+                            <a translate [href]=pub.url class="read-more" target="_blank">
                                 <fa-icon icon="link"></fa-icon> publi.read-more
                             </a>
-                            <ng-template #disabledLink>
-                                <a translate [href]=pub.url class="read-more disabled" target="_blank">
-                                    <fa-icon icon="link"></fa-icon> publi.read-more
-                                </a>
-                            </ng-template>
                         </div>
                         <div class="col">
                             <p class="card-text text-end">
@@ -173,7 +168,7 @@
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
                     <div class="row w-100 foot-card">
                         <div class="col">
-                            <a translate [href]=pub.url class="read-more" target="_blank">
+                            <a translate [href]=pub.url class="read-more" target="_blank" disableWhenOffline>
                                 <fa-icon icon="link"></fa-icon> publi.read-more
                             </a>
                         </div>
